# Atlas-0

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Codex.md  README.md  package-lock.json  package.json  pyproject.toml
.claude/: audit_codebase.md  docs_sync.md  implement_task.md  refactor.md  review_changes.md  test_hunter.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
codex/: audit_codebase.md  docs_sync.md  implement_task.md  settings.local.json
configs/: default.toml
crates/atlas-core/: Cargo.toml  build.rs
crates/atlas-core/examples/: ipc_write_test.rs
crates/atlas-core/src/: error.rs  frame.rs  gaussian.rs  lib.rs  proto.rs  semantic.rs  shared_mem.rs  spatial.rs
crates/atlas-physics/: Cargo.toml
crates/atlas-physics/benches/: physics_bench.rs
crates/atlas-physics/src/: collision.rs  config.rs  integrator.rs  lib.rs  perturbations.rs  rigid_body.rs  simulator.rs  surfaces.rs  trajectory.rs
crates/atlas-slam/: Cargo.toml
crates/atlas-slam/benches/: optimizer_bench.rs
crates/atlas-slam/examples/: live_slam.rs
crates/atlas-slam/src/: config.rs  depth.rs  features.rs  gaussian_init.rs  keyframe.rs  lib.rs  matching.rs  optimizer.rs  pose_estimation.rs  renderer.rs  tracker.rs  viewer.rs
crates/atlas-slam/tests/: optimizer_integration.rs
crates/atlas-stream/: Cargo.toml
crates/atlas-stream/examples/: capture_demo.rs
crates/atlas-stream/src/: calibration.rs  capture.rs  config.rs  file_source.rs  lib.rs  pipeline.rs  preprocess.rs
data/eval_corpus/: bookshelf_tip_risk.json  elder_care_fall_path.json  garage_storage_stack.json  guest_ready_walkpath.json  kitchen_counter_edges.json  pet_cord_sweep.json  renter_move_in_receipt.json  sample_walkthrough.json  toddler_reach_test.json
data/sample_walkthrough/: README.md  expected_report.json
docker/: Dockerfile  Dockerfile.web  docker-compose.yml
docs/: DEVELOPMENT_PLAN.md
docs/architecture/: ADR-001-3dgs-slam.md  ADR-002-ipc-design.md  performance_report.md
frontend/: index.html  manifest.webmanifest  service-worker.js
frontend/js/: api.js  app.js  intelligence.js  overlay.js  product_playbooks.js  scene_viewer.js  upload.js
frontend/tests/: browser_smoke.mjs
proto/: atlas.proto
python/atlas/: __init__.py
python/atlas/api/: __init__.py  analytics.py  helpers.py  jobs.py  metrics.py  models.py  overlay.py  pipeline.py  reports.py  server.py  state.py  upload_analysis.py  upload_store.py
python/atlas/api/routers/: __init__.py  core.py  operator.py  product.py  uploads.py
python/atlas/utils/: __init__.py  atlas_pb2.py  config.py  shared_mem.py  video.py
python/atlas/vlm/: __init__.py  inference.py  ollama_client.py  prompts.py  region_extractor.py
python/atlas/vlm/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
python/atlas/world_model/: __init__.py  agent.py  hazards.py  label_store.py  query_parser.py  relationships.py  risk_aggregator.py
python/tests/: test_api.py  test_config.py  test_deployment_check.py  test_eval_corpus.py  test_hazards.py  test_metrics.py  test_overlay.py  test_providers.py  test_risk_aggregator.py  test_upload_analysis.py  test_upload_store.py  test_video.py  test_vlm.py  test_world_model.py
scripts/: benchmark.py  check_deployment.py  gen_proto.py  generate_sample_walkthrough.py  generate_sbom.py  load_smoke.py  record_demo.py  replay.py  run_atlas.py  run_upload_worker.py  setup.sh
tests/integration/: __init__.py  test_ipc.py
