[package]
name = "atlas-core"
description = "Shared types, traits, and error handling for Atlas-0"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
nalgebra.workspace = true
tracing.workspace = true
prost.workspace = true
bytes.workspace = true
