[package]
name = "atlas-slam"
description = "3D Gaussian Splatting SLAM pipeline for Atlas-0"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
## Enable the real-time `minifb` display window.
## Not enabled by default to avoid X11/Wayland system-library requirements in CI.
viewer = ["dep:minifb"]

[dependencies]
atlas-core.workspace = true
thiserror.workspace = true
serde.workspace = true
nalgebra.workspace = true
ndarray.workspace = true
image.workspace = true
tracing.workspace = true
rayon.workspace = true
crossbeam.workspace = true
memmap2.workspace = true
minifb = { version = "0.27", optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "optimizer_bench"
harness = false
