[package]
name = "atlas-stream"
description = "Video ingestion and frame pipeline for Atlas-0"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atlas-core.workspace = true
thiserror.workspace = true
serde.workspace = true
image.workspace = true
tracing.workspace = true
tokio.workspace = true
crossbeam.workspace = true
bytes.workspace = true
nokhwa.workspace = true
